# lidar-and-camera-ttc-measurement

./: CMakeLists.txt  README.md  package.xml  parameters.yaml
dat/: calibration.yaml
dat/yolo/: yolov3.weights
include/ttc_measurement/: camFusion.hpp  lidarData.hpp  matching2D.hpp  objectDetection2D.hpp
scripts/: bag2img.py  point_viewer.cpp  point_viewer_pickingEvent.cpp  some_cmd.sh
scripts/test/: FinalProject_Camera_withKITTIData.cpp  FinalProject_Camera_withRealData.cpp
src/: FinalProject_Camera.cpp  camFusion_Student.cpp  lidarData.cpp  matching2D_Student.cpp  objectDetection2D.cpp
